# BrakeCommunicator

./: .gitmodules  README.md
ccsr/: CMakeLists.txt
ccsr/.cache/clangd/index/: main.c.3DED29805AD525FD.idx  matrix.h.EFDEC5491FFC30A0.idx
ccsr/matrices/: Hamrle1.8_4_LE.csr
ccsr/task_a/: main.c  matrix.c  matrix.h
csr/: .gitignore  CMakeLists.txt  GL7d191.out  GL7d1916.out  GL7d192.out  GL7d1932.out  GL7d194.out  GL7d1964.out  GL7d198.out  HelloWorldMPI  IMDB1.out  IMDB16.out  IMDB2.out  IMDB32.out  IMDB4.out  IMDB64.out  IMDB8.out  ML_Geer1.out  ML_Geer128.out  ML_Geer16.out  ML_Geer2.out  ML_Geer32.out  ML_Geer4.out  ML_Geer6.out  ML_Geer64.out  ML_Geer8.out  arabic20051.out  arabic200516.out  arabic20052.out  arabic200532.out  arabic20054.out  arabic200564.out  arabic20058.out  build.sh  cage151.out  cage1516.out  cage152.out  cage1532.out  cage154.out  cage1564.out  (+44 more)
csr/.cache/clangd/index/: Blaze.hpp.C6A09D95321CB31B.idx  GKlib.h.7350327796910BAA.idx  GKlib.h.85AE27F5C85D5634.idx  array.hpp.D1AD94881109660C.idx  auxapi.c.1EF97DF6FF04DCAD.idx  auxapi.c.3757B360F0B9E8C4.idx  auxapi.c.B32EBFEB10BA69F7.idx  b64.c.F0288251E355150A.idx  balance.c.349B256213602D54.idx  balance.c.6F0D075B072C9E02.idx  balance.c.71C39B0E4DE4AADA.idx  blas.c.5AA997BE41C96434.idx  bucketsort.c.555AA499FA3397A8.idx  bucketsort.c.A72DD5C85589D9F7.idx  bucketsort.c.BA420EE1395FC5FC.idx  checkgraph.c.2ED25A67E3A6A05D.idx  checkgraph.c.46386C9BC9FD7522.idx  checkgraph.c.7CD95173C8D53095.idx  chunking.hpp.9D501440C2462C36.idx  cmdline_gpmetis.c.19FAAFA145F38A04.idx  cmdline_gpmetis.c.3B853D3149BF444D.idx  cmdline_gpmetis.c.6D340A0F35CAF895.idx  cmdline_m2gmetis.c.3116E38F06138BCD.idx  cmdline_m2gmetis.c.54F28450E8910E8B.idx  cmdline_m2gmetis.c.5AB241EBF261527E.idx  cmdline_mpmetis.c.5D185BC17680B5B6.idx  cmdline_mpmetis.c.94F39697278DA61C.idx  cmdline_mpmetis.c.ACE726F0A98B30F9.idx  cmdline_ndmetis.c.149B486E60DEEB29.idx  cmdline_ndmetis.c.4CB47657AA1CBFB1.idx  cmdline_ndmetis.c.DD7545C3612DBB96.idx  cmpfillin.c.302468BCC4B88B89.idx  cmpfillin.c.C8A7319765816B43.idx  cmpfillin.c.F97748684806302A.idx  coarsen.c.8FB4E5D670CEB1B3.idx  coarsen.c.BB48C0E3319983DC.idx  coarsen.c.EE93DC6BDFE97874.idx  common.h.3E77A603328959C4.idx  compress.c.717782BE47E3A76A.idx  compress.c.D492F27DEA7B87FF.idx  (+237 more)
csr/helloworld/: main.cpp
csr/matrices/: Arrow.mtx  Hamrle1.8_4_LE.csr.el  Identity.mtx
csr/task_a/: main.cpp  matrix.cpp  matrix.hpp  sparse_matrix.h
csr/task_b/: main.cpp  matrix.cpp  matrix.hpp
csr/task_c/: main.cpp  matrix.cpp  matrix.hpp
csr/times/: fpgaq_shared_times.md  fpgaq_times.md  hybrid_times.md  m1times.txt  rome16_shared_times.md  shared_new.md  times.txt
mat-vec-mult/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  cmt  colmult  colmult.cpp  colmult.sh  colmult_pragma.cpp  colmult_total.cpp  gmt  gridmult  gridmult.cpp  gridmult.sh  gridmult_pragma.cpp  gridmult_total.cpp  gridmult_total_pragma.cpp  main.c  main.cpp  removelines.sh  rmt  rowmult  rowmult.c  rowmult.cpp  rowmult.sh  rowmult_pragma.cpp  rowmult_seq.c  rowmult_seq.cpp  rowmult_total.cpp  rowmult_total_pragma.cpp  runj  runj.sh  runj2.sh  runjob  runjob.sh  runjob1.sh  runjob2.sh  script.sh  script2.sh  (+2 more)
mat-vec-mult/.cache/clangd/index/: colmult.cpp.276E365D0EB18017.idx  colmult_pragma.cpp.878EF5E4374D044D.idx  colmult_total.cpp.84BC4E06C6B349EE.idx  gridmult.cpp.7FD45943E82F4BFE.idx  gridmult_pragma.cpp.27ED4D3AAB761DAD.idx  gridmult_total.cpp.3974DA72FBF8B1B4.idx  main.cpp.4CE876D1569E2B99.idx  rowmult.cpp.A049F19B74A53E67.idx  rowmult2.cpp.EB7466AD1D969798.idx  rowmult_pragma.cpp.678C42EF5EF73B95.idx  rowmult_total.cpp.5AF16F2210DD2390.idx  test.cpp.55412D55A1FEEE97.idx
mat-vec-mult/colmult_res/: times.txt
mat-vec-mult/colmult_res/outputs/: 8995.out  9054.out  9055.out  9056.out  9059.out  9061.out  9062.out  9070.out  9080.out  9082.out  9084.out  9096.out  9120.out  9212.out  9370.out  9754.out  9867.out  9868.out  9869.out
mat-vec-mult/gridmult_res/: 8713.out  times.txt
mat-vec-mult/gridmult_res/outputs/: 9366.out  9367.out  9371.out  9372.out  9373.out
mat-vec-mult/hey/node1/c1/: col.txt  grid.txt  row.txt
mat-vec-mult/hey/node1/c16/: col.txt  grid.txt  row.txt
mat-vec-mult/hey/node1/c2/: col.txt  row.txt
mat-vec-mult/hey/node1/c4/: col.txt  row.txt
mat-vec-mult/hey/node1/c8/: col.txt  row.txt
mat-vec-mult/hey/node2/c1/: col.txt  row.txt
mat-vec-mult/hey/node2/c16/: col.txt
mat-vec-mult/hey/node4/c1/: grid.txt  row.txt
mat-vec-mult/hey/node4/c16/: col.txt  grid.txt  row.txt
mat-vec-mult/hey/node8/c1/: col.txt
mat-vec-mult/hey/node8/c16/: row.txt
mat-vec-mult/results/node1/c1/: .grid.txt.swp  col.txt  grid.txt  row.txt
mat-vec-mult/results/node1/c16/: col.txt  grid.txt  row.txt
mat-vec-mult/results/node1/c2/: col.txt  row.txt
mat-vec-mult/results/node1/c4/: col.txt  grid.txt  row.txt
mat-vec-mult/results/node1/c8/: col.txt  grid.txt  row.txt
mat-vec-mult/results/node2/c1/: col.txt  row.txt
mat-vec-mult/results/node2/c16/: col.txt  row.txt
mat-vec-mult/results/node4/c1/: col.txt  grid.txt  row.txt
mat-vec-mult/results/node4/c16/: col.txt  (+2 more)
mat-vec-mult/rowmult_res/outputs/: 9437.out  9438.out  9439.out  9440.out  9441.out  9908.out
sparse-matrix/: CMakeLists.txt  ellpack.cpp  ellpack.h  main.cpp  mesh.h  removelines.sh  runj2.sh  runjob1.sh  runjob2.sh  sparse.cpp  test.cpp
sparse-matrix/par1/: ellpack.cpp  ellpack.h  main.cpp
sparse-matrix/par2/: ellpack.cpp  main.cpp
sparse-matrix/par_a/: ellpack.cpp  ellpack.h  main.cpp
sparse-matrix/par_d/: ellpack.cpp  ellpack.h  main.cpp
sparse-matrix/seq/: ellpack.cpp  mesh.cpp  mesh.h
sparse-matrix/seq1/: ellpack.cpp  ellpack.h
sparse-matrix/visualizers/par_a/: ellpack.cpp
sparse-matrix/visualizers/seq/: ellpack.cpp  ellpack.h  main.cpp  visualizer.cpp
sparse-matrix/visualizers/task_a/: ellpack.cpp  main.cpp  visualizer.cpp
sparse-matrix/visualizers/task_b/: ellpack.cpp  ellpack.h  main.cpp  visualizer.cpp
sparse-matrix/visualizers/task_d/: ellpack.cpp  ellpack.h  main.cpp  visualizer.cpp
(+132 files in other folders)
